--- a/package.json
+++ b/package.json
@@ -25,22 +25,31 @@
     "build": "tsc -p tsconfig.json",
     "build:watch": "tsc -w -p tsconfig.json",
     "build:release": "npm run clean && tsc -p tsconfig.release.json",
-    "prettier": "prettier --config .prettierrc --write ."
+    "prettier": "prettier --config .prettierrc --write .",
+    "test": "jest --config ./test/config/jest.config.json",
+    "test:watch": "npm run test -- --watch",
+    "test:cov": "npm run test -- --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/config/e2e-test.config.json",
+    "test:src": "jest --config ./test/config/src-test.config.json"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.8.7",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "eslint": "^8.42.0",
-    "typescript": "^5.3.2",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
+    "prettier": "^3.0.0",
     "rimraf": "^5.0.5",
+    "source-map-support": "^0.5.21",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "prettier": "^3.0.0",
-    "source-map-support": "^0.5.21",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0"
+    "typescript": "^5.3.2"
   },
   "engines": {
     "node": ">=20"
